# trio-asif-kiran-mithun

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  gaps.md  presentation.html  pyproject.toml
.github/workflows/: ci.yml
analysis/: README.md  compare_slices.py  slice_stats.py
analysis/reports/: slice1-stats.md
analysis/snapshots/: slice1.json
config/: cost_table.yaml  default.yaml  skill_adjacency.yaml
data/project_feedback/: Aisha.md  Ananya.md  Anjali.md  Deepa - Backend.md  Deepa - Frontend.md  Farhan - Frontend.md  Farhan - Platform.md  Gautam - Backend.md  Harish.md  Imran - Backend.md  Karan.md  Karthik.md  Meera - Data.md  Priya - Backend.md  Rahul.md  Rohan.md  Sandeep - Backend.md  Sandeep - Frontend 2.md  Varun.md  Vivaan - Frontend.md
deploy_data/project_feedback/: Aarav - Backend.md  Aarav - Data.md  Aarav - Platform.md  Gautam - Frontend.md  Imran - Backend 2.md  Lakshmi.md  Manish.md  Meera - Backend.md  Naveen.md  Neha.md  Pooja.md  Priya - Frontend.md  Sandeep - Frontend.md  Vikram.md  Vivaan - Backend.md
docs/: DECISIONS.md  DEPLOYMENT.md  PLAN.md  PRD_refined.md  SCORING_SPEC.md  SOLUTION_VS_THEMES.md  TECHNICAL_DESIGN.md  UI_DEPLOYMENT_PLAN.md  dsm-mindmap.html  llm-vs-no-llm-comparison.md  notes-and-clarifications.md  presentation.html  problem-statement.md  slice-1-implementation-plan.md  slice-2-implementation-plan.md  slice-3-implementation-plan.md  slice-4-implementation-plan.md  what-the-demo-taught-us.html
evals/fixtures/: eval_data.xlsx
evals/golden/: roles.yaml
fix/: TASK1.md  TASK2.md  TASK3.md  TASK4.md  TASK5.md  TASK6.md  TASK7.md  TASK8.md
presentations/: index.html
presentations/assets/: deck.css  deck.js
presentations/final-product/: index.html
presentations/slice-1-deterministic-core/: index.html
presentations/slice-2-llm-extraction/: index.html
presentations/slice-3-explanations-and-gaps/: index.html
presentations/slice-4-hardening-and-eval/: index.html
scripts/: README.md  ci.sh  fix.sh  generate_eval_fixtures.py
tests/: conftest.py
(+113 files in other folders)
