[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demand-supply-matcher"
version = "0.1.0"
description = "CLI staffing recommendation engine for Parity Partners"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.7.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "docling>=2.0",
    "dspy-ai>=2.4",
    "pymilvus[milvus-lite,model]>=2.4",
    "sentence-transformers>=2.7",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "structlog>=24.0",
    "dateparser>=1.4.1",
    "streamlit>=1.38",
]

[project.scripts]
dsm = "matcher.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "deepeval>=0.21",
    "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matcher"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=matcher --cov-report=term-missing"

[tool.mypy]
strict = true
packages = ["matcher"]

[[tool.mypy.overrides]]
module = ["dspy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matcher.llm.modules", "matcher.llm.explain_module", "matcher.llm.skill_inference", "matcher.models.telemetry"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docling.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dateparser.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pymilvus.*"]
ignore_missing_imports = true
